<resources>
    <string name="app_name">MultiGames-Clicker</string>
    <string name="Clicker">Clicker</string>
    <string name="CoimngSoon">Coming soon</string>
    <string name="shop">Shop</string>
    <string name="carrot">carrots</string>
    <string name="Ucarrots">Your carrots:</string>
    <string name="oppening">Oppening</string>
    <string name="collection">Collection</string>
    <string name="gambling">Gambling</string>
    <string name="roulette">Roulette</string>
    <string name="saper">Saper</string>
    <string name="crash">Crash</string>
    <string name="cards">Cards</string>
    <string name="loading">loading</string>
    <string name="zero">0</string>
    <string name="my_bet">My bet: </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="buy_open">Buy and open</string>
    <string name="buy">Buy</string>
    <string name="wannaBuy">Do you wanna buy this pack for</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="skip">Skip</string>
    <string name="football" >Football</string>
    <string name="my_collection">My collection</string>
    <string name="upgrades" >Upgrades</string>
    <string name="noMoney">You need more carrots!</string>
    <string name="upgraded">Upgraded!</string>
    <string name="exaplmeAmount">150000</string>
    <string name="x2">x2</string>
    <string name="x14">x14</string>
    <string name="bet">Bet!</string>
    <string name="pickColor">You must chose color!</string>
    <string name="setBetValue">You must set bet value!</string>
    <string name="youWin">YOU WIN!</string>
    <string name="youLose">YOU LOSE!</string>
    <string name="start">Start</string>
    <string name="liveWin">Live win:</string>
    <string name="stop">Stop</string>
    <string name="restart">Restart</string>
    <string name="actualReward">Actual reward:</string>
    <string name="reward">Reward:</string>
    <string name="multiplay">Multiplay:</string>
    <string name="rl">Rucket League</string>
    <string name="csgo">CS-GO</string>
</resources>
