<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/Gambling"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/gambling"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/rulette"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rulette"
        app:layout_constraintBottom_toTopOf="@+id/crash"
        app:layout_constraintEnd_toStartOf="@+id/saper"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Gambling" />

    <Button
        android:id="@+id/saper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saper"
        app:layout_constraintBottom_toTopOf="@+id/cards"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/rulette"
        app:layout_constraintTop_toBottomOf="@+id/Gambling" />

    <Button
        android:id="@+id/crash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crash"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cards"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rulette" />

    <Button
        android:id="@+id/cards"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cards"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/crash"
        app:layout_constraintTop_toBottomOf="@+id/saper" />
</android.support.constraint.ConstraintLayout>