<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageViewGreen"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toStartOf="@+id/imageViewBlack"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageViewRed"
        app:layout_constraintTop_toBottomOf="@+id/seekBarBet"
        app:srcCompat="@color/rouletteGreen" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/roulette"
        android:textSize="30sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/carrotsAmount"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/carrotsAmount"
        app:srcCompat="@drawable/ic_carrot" />

    <TextView
        android:id="@+id/carrotsAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="3dp"
        android:layout_marginTop="8dp"
        android:text="@string/exaplmeAmount"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView7"
        app:layout_constraintEnd_toStartOf="@+id/imageView8"
        app:layout_constraintTop_toTopOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.113" />

    <TextView
        android:id="@+id/myBetView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/my_bet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <SeekBar
        android:id="@+id/seekBarBet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myBetView" />

    <TextView
        android:id="@+id/textViewWinLose"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="Win/Lose"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/seekBarBet" />

    <ImageView
        android:id="@+id/imageViewResultColor"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/textViewWinLose"
        app:srcCompat="@color/rouletteGreen" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <ImageView
        android:id="@+id/imageViewBlack"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginEnd="4dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toEndOf="@+id/imageViewGreen"
        app:layout_constraintTop_toBottomOf="@+id/seekBarBet"
        app:srcCompat="@color/rouletteBlack" />

    <ImageView
        android:id="@+id/imageViewRed"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toStartOf="@+id/imageViewGreen"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBarBet"
        app:srcCompat="@color/rouletteRed" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/x2"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewRed"
        app:layout_constraintEnd_toEndOf="@+id/imageViewRed"
        app:layout_constraintStart_toStartOf="@+id/imageViewRed"
        app:layout_constraintTop_toTopOf="@+id/imageViewRed" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/x14"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewGreen"
        app:layout_constraintEnd_toEndOf="@+id/imageViewGreen"
        app:layout_constraintStart_toEndOf="@+id/imageViewRed"
        app:layout_constraintTop_toTopOf="@+id/imageViewGreen" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/x2"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewBlack"
        app:layout_constraintEnd_toEndOf="@+id/imageViewBlack"
        app:layout_constraintStart_toEndOf="@+id/imageViewGreen"
        app:layout_constraintTop_toTopOf="@+id/imageViewBlack" />

    <Button
        android:id="@+id/buttonBet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/bet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView22" />

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="0"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewResultColor"
        app:layout_constraintEnd_toEndOf="@+id/imageViewResultColor"
        app:layout_constraintStart_toStartOf="@+id/imageViewResultColor"
        app:layout_constraintTop_toTopOf="@+id/imageViewResultColor" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/myBetView"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toEndOf="@+id/myBetView"
        app:layout_constraintTop_toTopOf="@+id/myBetView"
        app:srcCompat="@drawable/ic_carrot" />

</android.support.constraint.ConstraintLayout>